# clipping-benchmarks

./: .gitignore  1-generate-triangles.ipynb  10-analyze-plot.ipynb  2-numba.ipynb  3-julia.ipynb  4-fortran-via-python-ctypes.ipynb  5-fortran-via-julia-ccall.ipynb  6-cpp-via-cython.ipynb  7-shapely.ipynb  8-pygeos.ipynb  9-analyze-plot.ipynb  9-rust-via-py03.ipynb  LICENSE  README.md  environment.yml  fortran.ipynb  julia.ipynb  numba.ipynb
src/cplusplus/: clipping.cpp  clipping.h  cpp_clipping.pyx  setup.py  test.py
src/fortran/: clipping.f90
src/rust/: Cargo.toml  pyproject.toml
src/rust/src/: algorithm.rs  lib.rs
timing/: cython-msvc-cpp.json  julia-gfortran.json  julia-ifort.json  julia.json  numba-parallel.json  numba.json  pygeos.json  python-gfortran.json  python-ifort.json  rust-pyo3-parallel.json  rust-pyo3.json  shapely.json
