[package]
name = "rust_clipping"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[lib]
name = "rust_clipping"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = "0.17.2"
ndarray = {version = "0.15.6", features = ["rayon"]}
